# Game-Engine

./: .gitignore  CMakeLists.txt  Module.code-workspace  Module.sln  README.md
Console Game Engine/: Console Game Engine.sln
Console Game Engine/Console Game Engine/: Color.cpp  Color.h  Console Game Engine.vcxproj  Console Game Engine.vcxproj.filters  Draw.h  DrawLibrary.h  GameEngine.cpp  GameEngine.h  Graphic_Pixel.cpp  Graphic_Pixel.h  Graphics2D.cpp  Graphics2D.h  Keyboard.h  Map.hpp  Model2D.cpp  Model2D.h  Mouse.h  Player.cpp  Player.hpp  Point.cpp  Point.h  Rect.h  Vector2D.hpp  main.cpp  개발자 문서.txt
Console Graphics/: Action.h  Color.cpp  Color.h  Console Graphics.vcxproj  Console Graphics.vcxproj.filters  Cursor.cpp  Cursor.h  Display.h  Enviroment.h  EnviromentDefine.h  EventHandler.cpp  EventHandler.h  Func.h  Graphics.cpp  Graphics.h  IDevice.h  Keyboard.h  Mouse.h  Pixel.cpp  Pixel.h  Point.cpp  Point.h  Predicate.h  README.md  Renderer.h  Terminal.cpp  Terminal.h
Console Graphics/Console Graphics.xcodeproj/: project.pbxproj
Console Graphics/Console Graphics.xcodeproj/xcshareddata/xcschemes/: Console Graphics.xcscheme
Console Graphics/Console Graphics.xcodeproj/xcuserdata/aoikazto.xcuserdatad/xcschemes/: xcschememanagement.plist
Example/: main.cpp
Example/UnitTest/: EnvTest.h  TestModule.h
Graphics/: .CMakeLists.txt.swp  CMakeLists.txt  Color.cpp  Color.h  Cursor.cpp  Display.cpp  Display.h  EventHandler.cpp  EventHandler.h  Func.cpp  Func.h  Graphics.cpp  Graphics.h  Makefile  Mouse.h  Terminal.cpp  Terminal.h
Graphics/Input/: Keyboard.h
Graphics/Output/: Display.cpp
Module.xcworkspace/: contents.xcworkspacedata
Module.xcworkspace/xcuserdata/aoikazto.xcuserdatad/: UserInterfaceState.xcuserstate
Module.xcworkspace/xcuserdata/aoikazto.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Project/OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters
Sample1/: Sample1.vcxproj
Unit Test/: EventHandlerTest.h  FunctionTest.h  GraphicsTest.h  TestModule.hpp  Unit Test.vcxproj  Unit Test.vcxproj.filters  main.cpp
Unit Test/Unit Test.xcodeproj/: project.pbxproj
Unit Test/Unit Test.xcodeproj/xcshareddata/xcschemes/: Unit Test.xcscheme
Unit Test/Unit_Test.xcodeproj/: project.pbxproj
Unit Test/Unit_Test.xcodeproj/xcshareddata/xcschemes/: Unit Test.xcscheme
Unit Test/Unit_Test.xcodeproj/xcuserdata/aoikazto.xcuserdatad/xcschemes/: xcschememanagement.plist
UnitTest/: CMakeLists.txt  EventHandlerTest.h  FunctionTest.h  Graphics  TestModule.hpp  main.cpp
include/Graphics/: Color.h  Cursor.h  Display.h  Enviroment.h  EventHandler.h  Func.h  Keyboard.h  Mouse.h  Pixel.h  Point.h  Terminal.h  Vector.h  Window.h
include/Graphics/Shape/: Rectangle.h  Shape.h
lib/Graphics/default/: Point.cpp
lib/Graphics/macos/: Cursor.cpp  Display.cpp  EventHandler.cpp  Func.cpp  Keyboard.cpp  Mouse.cpp  Terminal.cpp
lib/Graphics/windows/: Cursor.cpp  Display.cpp  Keyboard.cpp  Mouse.cpp  Terminal.cpp
lib/macos/Graphics/: Color.cpp  Display.cpp  Keyboard.cpp  Mouse.cpp  Pixel.cpp  Point.cpp  Window.cpp
lib/windows/Graphics/: Color.cpp  Display.cpp  Keyboard.cpp  Mouse.cpp  Pixel.cpp  Vector.cpp  Window.cpp
prev/include/Graphics/: Enviroment.h  Func.h  Keyboard.h
prev/lib/Graphics/windows/: Display.cpp  Keyboard.cpp  Terminal.cpp
